--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -35,3 +35,7 @@ article ul {
 article ol {
   @apply list-decimal list-inside;
 }
+
+article blockquote {
+  @apply py-0.5 ml-3 text-gray-600 border-l-2 border-gray-600;
+}
