--- a/src/components/BlogEntries.astro
+++ b/src/components/BlogEntries.astro
@@ -8,9 +8,11 @@ interface Props {
 }
 
 const { max = 3 } = Astro.props;
+const { slug } = Astro.params;
 
 const blogPosts = await getCollection("blog");
 const blogEntries = blogPosts
+  .filter((post) => post.slug !== slug?.split("/")[1])
   .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
   .slice(0, max);
 ---
