--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -21,7 +21,7 @@ const { points, title } = Astro.props;
     </h2>
   </div>
   <ol
-    class="relative space-y-8 before:absolute before:-ml-px before:h-full before:w-0.5 before:rounded-full before:bg-gray-200 dark:before:bg-gray-700"
+    class="relative space-y-8 before:absolute before:-ml-px before:h-full before:w-0.5 before:rounded-full before:bg-gray-200"
   >
     {
       points.map((point) => (
@@ -29,11 +29,11 @@ const { points, title } = Astro.props;
           <span class="size-3 shrink-0 rounded-full bg-accent" />
 
           <div class="-mt-2">
-            <h3 class="text-lg font-bold text-gray-800 dark:text-white">
+            <h3 class="text-lg font-bold text-gray-800">
               {point.title}
             </h3>
 
-            <p class="mt-0.5 text-sm text-gray-700 dark:text-gray-200">
+            <p class="mt-0.5 text-sm text-gray-700">
               {point.description}
             </p>
           </div>
