--- a/src/components/FeaturedReceipe.astro
+++ b/src/components/FeaturedReceipe.astro
@@ -31,7 +31,7 @@ const receipt = blogEntry?.data;
         <div>
           <Image
             alt={receipt.title}
-            src={receipt.image}
+            src={receipt.imageUrl}
             class="rounded-lg shadow-md max-h-100 object-cover"
             width={400}
             height={400}
