--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -7,19 +7,13 @@ import { SITE_TITLE } from "../consts";
 interface Props {
   title: string;
   description: string;
-  image?: string;
+  imageUrl: string;
   tags?: string[];
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const {
-  title,
-  description,
-  image = "/placeholder.jpg",
-  tags = [],
-} = Astro.props;
-const imageUrl = new URL(image, Astro.site).toString();
+const { title, description, imageUrl, tags = [] } = Astro.props;
 ---
 
 <!-- Global Metadata -->
