--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,13 +11,14 @@ interface LayoutProps {
 }
 
 const { title, description } = Astro.props as LayoutProps;
+const imageUrl = new URL("/placeholder.jpg", Astro.site).toString();
 ---
 
 <!doctype html>
 <html lang="es">
   <head>
-    <Analytics />
-    <BaseHead title={title} description={description} />
+    <!-- <Analytics /> -->
+    <BaseHead title={title} imageUrl={imageUrl} description={description} />
   </head>
   <body>
     <Navbar />
