--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -73,6 +73,8 @@ const links = [
     ],
   },
 ];
+
+const year = new Date().getFullYear();
 ---
 
 <footer class="bg-[#8c3f95]">
@@ -144,7 +146,7 @@ const links = [
     </div>
 
     <p class="text-xs text-white">
-      &copy; 2025. Made with ❤️ by an enthusiastic bartender
+      &copy; {year}. Made with ❤️ by an enthusiastic bartender
     </p>
   </div>
 </footer>
