feat: Enable Analytics component in BlogLayout and MainLayout

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -21,7 +21,7 @@ const { title, description, tags, imageUrl } = Astro.props;
 <!doctype html>
 <html lang="es">
   <head>
-    <!-- <Analytics /> -->
+    <Analytics />
     <BaseHead
       title={title}
       description={description}
