--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,7 +17,7 @@ const imageUrl = new URL("/placeholder.jpg", Astro.site).toString();
 <!doctype html>
 <html lang="es">
   <head>
-    <!-- <Analytics /> -->
+    <Analytics />
     <BaseHead title={title} imageUrl={imageUrl} description={description} />
   </head>
   <body>
