feat: Add Facebook domain verification meta tag to Analytics component

--- a/src/components/layout/Analytics.astro
+++ b/src/components/layout/Analytics.astro
@@ -12,3 +12,4 @@
   })(window, document, "script", "dataLayer", "GTM-MLXPRWS5");
 </script>
 <!-- End Google Tag Manager -->
+ <meta name="facebook-domain-verification" content="xan54g4bw8g41bu81o2i1a7rawopal" />
